--- a/Static/css/main.css
+++ b/Static/css/main.css
@@ -1,11 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap");
 *, *::before, *::after {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
+  padding: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,6 +26,8 @@ header {
 
 header .logo {
   color: #7c2222;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
 
 header .menuAndLogo, header .personalmenu {
@@ -33,7 +38,6 @@ header .menuAndLogo, header .personalmenu {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 0 15px;
 }
 
 header .personalmenu p:nth-child(odd) {
@@ -58,12 +62,33 @@ header .menu .selected {
 
 header .menu li {
   margin: 0 5px 0 0;
-  padding: 0 10px;
 }
 
 header .menu ul {
   display: none;
+  position: absolute;
   list-style: none;
+  background-color: #efefef;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+header .menu ul li {
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .menu .drop:hover ul {
+  display: block;
+}
+
+header .menu .drop:hover li:hover {
+  border-bottom: 1px solid #000000;
 }
 
 header .search {
@@ -81,6 +106,7 @@ header .search {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  max-width: 500px;
 }
 
 header .search img {
@@ -93,5 +119,133 @@ header .search input {
   background-color: transparent;
   border: none;
   width: 100%;
+}
+
+.herowrap {
+  max-width: 100%;
+  width: 100%;
+}
+
+.herowrap .hero {
+  background-color: #7c2222;
+  height: 20vh;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 0 0 15px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.herowrap .hero p {
+  margin: 0 15px;
+  font-size: 3em;
+}
+
+.productRow, .section {
+  margin: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+  -webkit-box-flex: 0.5;
+      -ms-flex-positive: 0.5;
+          flex-grow: 0.5;
+}
+
+.section .productRow {
+  margin: 0;
+}
+
+.expandable {
+  border: 1px solid #333;
+}
+
+.small {
+  max-width: 30%;
+}
+
+.productWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 15px 0 0;
+}
+
+.productWrap .product {
+  padding: 5px;
+  padding-bottom: 100px;
+  border: 3px solid #333333;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.productWrap .product img {
+  max-width: 500px;
+}
+
+.productWrap .product p {
+  font-size: 1.3em;
+}
+
+.productWrap button {
+  padding: 5px 15px;
+  border-radius: 15px;
+  border: 1px #681d1d solid;
+  background-color: #7c2222;
+  font-weight: 500;
+  color: white;
+  justify-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin: -10px -30px;
+  font-size: 1.12em;
+  z-index: 1;
+}
+
+footer {
+  max-height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  background-color: #efefef;
+  padding: 20px 15px;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer ul li:nth-child(even) {
+  margin: 5px 0 0 0;
+}
+
+footer div {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 /*# sourceMappingURL=main.css.map */
