--- a/Static/css/main.scss
+++ b/Static/css/main.scss
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
+// html{
+//   margin: 15px;
+// }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
 @import './constants.scss';
 @import './menu.scss';
+@import './hero.scss';
+@import './product.scss';
+@import './footer.scss'
